some fixes for solid and booch